<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Resources</string>
    <string name="create_character">Создать</string>
    <string name="rage">Ярость</string>
    <string name="faith">Вера</string>
    <string name="willpower">Сила Воли</string>
    <string name="reset">По умолчанию</string>
    <string name="health">Здоровье</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
    <string name="new_char">Новый персонаж</string>
    <string name="exit_app">Выход</string>
    <string name="char_0">0</string>
    <string name="char_m_1">-1</string>
    <string name="char_m_2">-2</string>
    <string name="char_m_5">-5</string>
    <string name="char_m_10">-10</string>
    <string name="char_minus">-</string>
    <string name="char_plus">+</string>
    <string name="title_activity_enter_name">enter_name</string>
    <string name="name_hint">Введите имя персонажа</string>
    <string name="chronic_hint">Введите имя хроники</string>
    <string name="title_activity_load_char">load_char</string>
    <string name="charlist_char_name_hint">Имя персонажа %1$s</string>
    <string name="charlist_chronic_name_hint">Хроника %1$s</string>
    <string name="gen_points_helper"> [%1$d]</string>
    <string name="free_points_helper">Очков [%1$d], цена %2$d</string>
    <string-array name="alignments_array">
        <item>Законопослушный-Добрый</item>
        <item>Нейтральный-Добрый</item>
        <item>Хаотичный-Добрый</item>
        <item>Законопослушный-Нейтральный</item>
        <item>Нейтральный</item>
        <item>Хаотичный-Нейтральный</item>
        <item>Законопослушный-Злой</item>
        <item>Нейтральный-Злой</item>
        <item>Хаотичный-Злой</item>
    </string-array>
    <string-array name="classes_array">
        <item>Воин</item>
        <item>Маг</item>
        <item>Жрец</item>
    </string-array>
    <string name="charlist_gods_hint">Бог %1$s</string>
    <string-array name="gods_lg_array">
        <item>Келемвор</item>
        <item>Коссут</item>
        <item>Латандер</item>
        <item>Мистра</item>
        <item>Суне</item>
        <item>Тир</item>
        <item>Чонти</item>
    </string-array>
    <string-array name="gods_ng_array">
        <item>Грумбар</item>
        <item>Истишия</item>
        <item>Коссут</item>
        <item>Латандер</item>
        <item>Мистра</item>
        <item>Суне</item>
        <item>Сильванус</item>
        <item>Тир</item>
        <item>Чонти</item>
    </string-array>
    <string-array name="gods_cg_array">
        <item>Латандер</item>
        <item>Мистра</item>
        <item>Суне</item>
        <item>Темпус</item>
        <item>Чонти</item>
    </string-array>
    <string-array name="gods_ln_array">
        <item>Акади</item>
        <item>Грумбар</item>
        <item>Истишия</item>
        <item>Келемвор</item>
        <item>Коссут</item>
        <item>Мистра</item>
        <item>Сильванус</item>
        <item>Тир</item>
        <item>Бэйн</item>
    </string-array>
    <string-array name="gods_nn_array">
        <item>Грумбар</item>
        <item>Истишия</item>
        <item>Коссут</item>
        <item>Огма</item>
        <item>Сильванус</item>
        <item>Чонти</item>
    </string-array>
    <string-array name="gods_cn_array">
        <item>Акади</item>
        <item>Грумбар</item>
        <item>Истишия</item>
        <item>Коссут</item>
        <item>Сайрик</item>
        <item>Суне</item>
        <item>Сильванус</item>
        <item>Талос</item>
        <item>Темпус</item>
    </string-array>
    <string-array name="gods_le_array">
        <item>Келемвор</item>
        <item>Коссут</item>
        <item>Мистра</item>
        <item>Шар</item>
        <item>Бэйн</item>
    </string-array>
    <string-array name="gods_ne_array">
        <item>Акади</item>
        <item>Грумбар</item>
        <item>Истишия</item>
        <item>Коссут</item>
        <item>Сайрик</item>
        <item>Сильванус</item>
        <item>Талос</item>
        <item>Шар</item>
        <item>Бэйн</item>
    </string-array>
    <string-array name="gods_ce_array">
        <item>Сайрик</item>
        <item>Талос</item>
        <item>Темпус</item>
        <item>Шар</item>
    </string-array>
    <string name="charlist_alignment_hint">Мировоззрение %1$s</string>
    <string name="exp">Опыт</string>
    <string name="up_by_exp">Повысить параметры за опыт</string>
    <string name="finish_up_by_exp">Завершить вкладывать опыт</string>
    <string name="price_attr_exp">Цена: текущее значение х4</string>
    <string name="price_abl_exp">Цена: текущее значение х2</string>
    <string name="price_bkg_exp">Цена: текущее значение х3</string>
    <string name="price_class_feature_exp">Цена: текущее значение х5, новое 10</string>
    <string name="price_wp_exp">Цена: текущее значение х1</string>
    <string name="price_gft_exp">Цена: уровень целевого Дара х4</string>
    <string name="exp_title">Трата опыта</string>
    <string name="exp_msg">Сохранить изменения и завершить вкладывать опыт?</string>
    <string name="charlist_class_hint">Класс %1$s</string>
    <string name="attrs">Атрибуты</string>
    <string name="attr_physical">Физические</string>
    <string name="attr_strength">Сила</string>
    <string name="attr_dexterity">Ловкость</string>
    <string name="attr_stamina">Выносливость</string>
    <string name="attr_social">Социальные</string>
    <string name="attr_charisma">Харизма</string>
    <string name="attr_manipulation">Манипуляция</string>
    <string name="attr_appearance">Внешность</string>
    <string name="attr_mental">Ментальные</string>
    <string name="attr_perception">Восприятие</string>
    <string name="attr_intelligence">Интеллект</string>
    <string name="attr_wits">Сообразительность</string>
    <string name="abilities">Умения</string>
    <string name="abl_talents">Таланты</string>
    <string name="abl_alertness">Осторожность</string>
    <string name="abl_athletics">Атлетика</string>
    <string name="abl_brawl">Рукопашная</string>
    <string name="abl_subterfuge">Хитрость</string>
    <string name="abl_ambidexter">Амбидекстер</string>
    <string name="abl_leadership">Лидерство</string>
    <string name="abl_intimidation">Запугивание</string>
    <string name="abl_persuasion">Убеждение</string>
    <string name="abl_streetwise">Знание улиц</string>
    <string name="abl_enlightenment">Просвещенность</string>
    <string name="abl_skills">Навыки</string>
    <string name="abl_security">Безопасность</string>
    <string name="abl_craft">Ремесло</string>
    <string name="abl_blindfight">Бой вслепую</string>
    <string name="abl_etiquette">Этикет</string>
    <string name="abl_firearms">Дальнобойное</string>
    <string name="abl_survival">Выживание</string>
    <string name="abl_melee">Холодное</string>
    <string name="abl_herbalism">Гербализм</string>
    <string name="abl_stealth">Скрытность</string>
    <string name="abl_concentration">Концентрация</string>
    <string name="abl_knowledges">Знания</string>
    <string name="abl_alchemistry">Алхимия</string>
    <string name="abl_logic">Логика</string>
    <string name="abl_investigation">Расследование</string>
    <string name="abl_religion">Религия</string>
    <string name="abl_linguistics">Языки</string>
    <string name="abl_medicine">Медицина</string>
    <string name="abl_occult">Оккультизм</string>
    <string name="abl_politics">Политика</string>
    <string name="abl_science">Наука</string>
    <string name="backgrounds">Дополнения</string>
    <string name="bkg_allies">Союзники</string>
    <string name="bkg_contacts">Связи</string>
    <string name="bkg_fame">Слава</string>
    <string name="bkg_resources">Ресурсы</string>
    <string name="bkg_dignity">Титул</string>
    <string name="bkg_artifact">Артефакт</string>
    <string name="spheres">Сферы</string>
    <string name="sph_time">Время</string>
    <string name="sph_spirit">Дух</string>
    <string name="sph_life">Жизнь</string>
    <string name="sph_matter">Материя</string>
    <string name="sph_prime">Основы</string>
    <string name="sph_mind">Разум</string>
    <string name="sph_connection">Связь</string>
    <string name="sph_forces">Силы</string>
    <string name="sph_entropy">Энтропия</string>
    <string name="disciplines">Дисциплины</string>
    <string name="dis_animalism">Анимализм</string>
    <string name="dis_auspex">Прорицание</string>
    <string name="dis_celerity">Стремительность</string>
    <string name="dis_chimerstry">Химерия</string>
    <string name="dis_daimoinon">Демонизм</string>
    <string name="dis_dementation">Помешательство</string>
    <string name="dis_dominate">Доминирование</string>
    <string name="dis_fortitude">Стойкость</string>
    <string name="dis_melpominee">Мельпомения</string>
    <string name="dis_obfuscate">Затемнение</string>
    <string name="dis_obtenebration">Власть над Тенью</string>
    <string name="dis_potence">Могущество</string>
    <string name="dis_presence">Очарование</string>
    <string name="dis_protean">Превращение</string>
    <string name="dis_quietus">Смертоносность</string>
    <string name="dis_serpentis">Серпентис</string>
    <string name="dis_temporis">Темпорис</string>
    <string name="dis_thanatosis">Танатозис</string>
    <string name="dis_vicissitude">Изменчивость</string>
    <string name="dis_alchemistry">Алхимия</string>
    <string name="dis_conveyance">Перемещение</string>
    <string name="dis_enchantment">Зачарование</string>
    <string name="dis_healing">Исцеление</string>
    <string name="dis_hellfire">Адское Пламя</string>
    <string name="dis_weathercraft">Управление Погодой</string>
    <string name="gifts">Дары</string>
    <string name="gft_common">Общие</string>
    <string name="gft_monk">Монах</string>
    <string name="gft_warlord">Полководец</string>
    <string name="gft_assassin">Ассасин</string>
    <string name="gft_mageslayer">Убийца магов</string>
    <string name="gft_shapeshifter">Оборотень</string>
    <string name="generation">Генерация</string>
    <string name="go_to_free">Перейти к распределению Свободных Очков?\n
Нельзя будет поменять: Мировоззрение, Класс и Бог</string>
    <string name="ok">Да</string>
    <string name="cancel">Нет</string>
    <string name="finish_gen">Завершить генерацию?</string>
    <string name="hide_zero">Убрать нулевые параметры</string>
    <string name="show_zero">Показать нулевые параметры</string>
    <string name="atk_hands">Атака без оружия: %1$d</string>
    <string name="atk_melee">Атака холодным оружием Сила/Ловкость: %1$d/%2$d</string>
    <string name="atk_range">Атака стрельба: %1$d</string>
    <string name="atk_throw">Атака метание: %1$d</string>
    <string name="def">Защита: %1$d</string>
    <string name="init">Инициатива: %1$d</string>
    <string name="armor">Броня: </string>
    <string name="armor_pen">Штраф брони: </string>
    <string name="help_attr_strength" tools:keep="@string/help_attr_strength">
Сила это обычная, грубая мощь персонажа. Она показывает, сколько веса персонаж может
    поднять, что он может толкнуть или как сильно он может ударить другого персонажа или объект.
    Сила участвует в бросках атаки голыми руками и некоторым холодным оружием. Так же она
    используется, если персонаж хочет сломать, поднять или оттащить что-то, а так же когда персонаж
    пытается прыгнуть на какую-либо дистанцию.\n\n

Обычно используется с: Атлетика, Рукопашная, Холодное.\n\n

Специализации: Стальная хватка, Сильные руки, Резервы силы, Кулаки как наковальни.\n\n

Плохо(1):\t\t Вы можете поднять 18,4 кг.\n
Средне(2):\t\t Вы можете поднять 45,36 кг.\n
Хорошо(3):\t\t Вы можете поднять 113,4 кг.\n
Исключительно(4):\t\t Вы можете поднять 181,44 кг.\n
Великолепно(5):\t\t Вы можете поднять 294,84 кг и давить черепа как виноградины.\n
    </string>
</resources>