<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rage"
        android:id="@+id/checkBox_rage"
        android:onClick="onCheckboxClicked_sp_resources"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faith"
        android:id="@+id/checkBox_faith"
        android:onClick="onCheckboxClicked_sp_resources"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willpower"
        android:id="@+id/checkBox_wp"
        android:onClick="onCheckboxClicked_sp_resources"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        android:id="@+id/checkBox_health"
        android:onClick="onCheckboxClicked_sp_resources"/>
</LinearLayout>