<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context="com.example.asm.resources.greeting_screen"
    tools:ignore="Overdraw">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/new_char"
        android:id="@+id/create_char_button"
        android:onClick="run_enter_name"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/load"
        android:id="@+id/load_char_button"
        android:onClick="run_load_screen"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/exit_app"
        android:id="@+id/exit_button"
        android:onClick="exit_app"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
