<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/charlist_char_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Name"/>
        <EditText
            android:id="@+id/charlist_master_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/charlist_master_name_hint"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:inputType="text"
            android:imeOptions="actionDone"/>
        <EditText
            android:id="@+id/charlist_chronic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/charlist_chronic_name_hint"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/charlist_alignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/charlist_alignment_hint"
            android:layout_centerVertical="true"
            android:gravity="left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/charlist_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/charlist_class_hint"
            android:layout_centerVertical="true"
            android:gravity="right"/>
        <Spinner
            android:id="@+id/charlist_gods"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/charlist_gods_hint"
            android:layout_centerVertical="true"
            android:gravity="right"/>
    </LinearLayout>
</LinearLayout>