<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sp_rage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/special_rage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:keepScreenOn="true"
        android:text="@string/rage"
        android:textSize="50sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage1"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage2"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage3"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage4"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage5"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage6"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage7"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage8"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage9"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:src="@drawable/ic_radio_button_unchecked_black_24dp"
            android:id="@+id/image_rage10"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:text="@string/char_minus"
            android:onClick="minus_button"
            android:id="@+id/rage_minus_b" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:text="@string/reset"
            android:onClick="reset_button"
            android:id="@+id/rage_reset_b" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:onClick="plus_button"
            android:text="@string/char_plus"
            android:id="@+id/rage_plus_b" />
    </LinearLayout>
</LinearLayout>